# joshify

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SEARCH_FIX_SUMMARY.md  debug.sh  install.sh  lcov.info  package.json  uninstall.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml  visual-regression.yml  visual-tests.yml
.learnings/: history.md  learnings.md  playback-queue-lesson.md
.opencode/plans/: device-selector-ui.md  local-playback-implementation.md  local-playback-librespot.md  phase1-fix-foundation.md  playableitem-fix.md  playback-complete.md  playback-error-fix.md
docs/: VHS_USAGE.md  index.html
docs/landing-page/: index.html
milestones/: polish-and-release-plan.md
plans/: VHS_IMPLEMENTATION_PLAN.md
research/: spotify_context_playback.md
scripts/: capture-screenshots.sh  compare-screenshots.sh  install.js  uninstall.js  vhs-setup.sh
src/: album_art.rs  api.rs  auth.rs  cli.rs  config.rs  connect.rs  daemon.rs  keyring_store.rs  lib.rs  logging.rs  lyrics.rs  main.rs  media_control.rs  notifications.rs  player.rs  search.rs  session.rs  setup.rs  themes.rs  ui.rs
src/api/: client.rs  library.rs  mod.rs  playback.rs  rate_limit.rs
src/playback/: domain.rs  mod.rs  service.rs
src/player/: mod.rs  visualization.rs
src/state/: app_state.rs  home_state.rs  library_state.rs  load_coordinator.rs  mock_data.rs  mod.rs  navigation_stack.rs  player_state.rs  queue_state.rs  search_state.rs
src/ui/: device_selector.rs  help.rs  home_view.rs  image_renderer.rs  layout_cache.rs  lite_mode.rs  main_view.rs  (+6 more)
tapes/: home_view.tape  landing_page_demo.tape  navigation.tape  player_view.tape  readme_demo.tape
tasks/: double_click_plan.md  focus-management-plan.md  lessons.md  mouse-implementation-plan.md  todo.md  ui-redesign-plan.md
tests/: README.md  album_art.rs  album_art_rendering.rs  api.rs  auth.rs  concurrency.rs  error_injection.rs  performance_tests.rs  playback_api.rs  playback_error.rs  player.rs  state.rs  ui.rs
