[package]
name = "joshify"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
ratatui-image = "10.0"
rspotify = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
crossterm = "0.28"
chrono = "0.4"
dialoguer = "0.11"
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

[[bin]]
name = "joshify"
path = "src/main.rs"
