[package]
name = "joshify"
version = "0.5.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
ratatui-image = "10.0"
rspotify = "0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
crossterm = "0.28"
chrono = "0.4"
dialoguer = "0.11"
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
lru = "0.12"
keyring = "2.0"
base64 = "0.21"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
unicode-width = "0.2"
unicode-truncate = "2"
toml = "0.8"
dirs-next = "2.0"
nucleo = "0.5"
async-trait = "0.1"
thiserror = "2"
rand = "0.8"

# Audio visualization dependencies
realfft = "3.4"

# librespot for local playback (dev branch - crates.io 0.8.0 has vergen build bug)
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", features = ["rodio-backend"] }
librespot-oauth = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
hostname = "0.4.2"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"


